# Cloth-Simulator

./: CMakeLists.txt  README.md  imgui.ini
Shader/: cloth.frag  cloth.vert
include/: Camera.h  Cloth.h  Cube.h  ParachuteSystem.h  Particle.h  Shader.h  SpringDamper.h  Triangle.h
include/glad/: glad.h
libs/: glfw3.lib
src/: Camera.cpp  Cloth.cpp  Cube.cpp  ParachuteSystem.cpp  Particle.cpp  Shader.cpp  SpringDamper.cpp  Triangle.cpp  glad.c  main.cpp
